--- a/docker-compose.openwrt.yml
+++ b/docker-compose.openwrt.yml
@@ -25,7 +25,7 @@ version: '3.7'
 
 services:
   openwrt:
-    image: crazygit/lean-openwrt-x86-64
+    image: louis/openwrt-24.05.4 
     restart: always
     privileged: true
     volumes:
